--- a/Competition_Submission/Code/Model/Submission 5.ipynb
+++ b/Competition_Submission/Code/Model/Submission 5.ipynb
@@ -648,13 +648,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Type', 'Age', 'Gender', 'VideoAmt', 'PhotoAmt', 'has_a_name', 'Probability', 'MaturitySize_1', 'MaturitySize_2', 'MaturitySize_3', 'MaturitySize_4', 'FurLength_1', 'FurLength_2', 'FurLength_3', 'Vaccinated_1', 'Vaccinated_2', 'Vaccinated_3', 'Dewormed_1', 'Dewormed_2', 'Dewormed_3', 'Sterilized_1', 'Sterilized_2', 'Sterilized_3', 'Health_1', 'Health_2', 'Health_3', 'State_41324', 'State_41325', 'State_41326', 'State_41327', 'State_41330', 'State_41332', 'State_41335', 'State_41336', 'State_41342', 'State_41345', 'State_41361', 'State_41367', 'State_41401', 'State_41415', 'has_fee', 'more_than_1', 'RescuerCount', 'description_wordcount']\n"
+      "['Type', 'Age', 'Gender', 'VideoAmt', 'PhotoAmt', 'has_a_name', 'MaturitySize_1', 'MaturitySize_2', 'MaturitySize_3', 'MaturitySize_4', 'FurLength_1', 'FurLength_2', 'FurLength_3', 'Vaccinated_1', 'Vaccinated_2', 'Vaccinated_3', 'Dewormed_1', 'Dewormed_2', 'Dewormed_3', 'Sterilized_1', 'Sterilized_2', 'Sterilized_3', 'Health_1', 'Health_2', 'Health_3', 'State_41324', 'State_41325', 'State_41326', 'State_41327', 'State_41330', 'State_41332', 'State_41335', 'State_41336', 'State_41342', 'State_41345', 'State_41361', 'State_41367', 'State_41401', 'State_41415', 'has_fee', 'more_than_1', 'RescuerCount', 'description_wordcount']\n"
      ]
     }
    ],
    "source": [
     "y_columns = [\"AdoptionSpeed\"]\n",
-    "X_column_exclude = [\"PetID\",\"fee_per_pet\"]\n",
+    "X_column_exclude = [\"PetID\", \"Probability\",\"fee_per_pet\"]\n",
     "\n",
     "for column in df_test.columns:\n",
     "    if -1 != column.find(\"Name_\"):\n",
@@ -688,90 +688,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train (8000, 44)\n",
+      "X_train (8000, 43)\n",
       "y_train (8000, 1)\n",
-      "X_test (2000, 44)\n",
+      "X_test (2000, 43)\n",
       "y_test (2000, 1)\n",
       "Naive Bayes\n",
-      "[[ 14  34   1  12   4]\n",
-      " [ 57 241  12  64  15]\n",
-      " [ 70 278  20 138  22]\n",
-      " [ 53 190  17 171  20]\n",
-      " [103 233  13 167  51]]\n",
-      "Precision 0.2485\n",
-      "Recall 0.2485\n",
+      "[[  5  37   0   4   5]\n",
+      " [ 49 298   0  29  11]\n",
+      " [ 51 389   4  78  21]\n",
+      " [ 38 273   2 100  19]\n",
+      " [ 72 383   2  79  51]]\n",
+      "Precision 0.229\n",
+      "Recall 0.229\n",
       "\n",
       "RandomForestClassifier10\n",
-      "[[  2  14  18   8  23]\n",
-      " [  2 131 122  49  85]\n",
-      " [  2 130 199  88 109]\n",
-      " [  2  91 144 119  95]\n",
-      " [  2  83 110  77 295]]\n",
-      "Precision 0.373\n",
-      "Recall 0.373\n",
+      "[[  2  19  10   6  14]\n",
+      " [  6 131 128  58  64]\n",
+      " [  9 141 198  96  99]\n",
+      " [  2 100 128 115  87]\n",
+      " [  4  92 107  78 306]]\n",
+      "Precision 0.376\n",
+      "Recall 0.376\n",
       "Feature Importance\n",
       "                        0         1\n",
-      "43  description_wordcount  0.160357\n",
-      "42           RescuerCount  0.114117\n",
-      "1                     Age  0.110506\n",
-      "4                PhotoAmt  0.103911\n",
-      "6             Probability  0.099135\n",
-      "2                  Gender  0.045214\n",
-      "0                    Type  0.027974\n",
-      "28            State_41326  0.022679\n",
-      "40                has_fee  0.022300\n",
-      "11            FurLength_1  0.020806\n",
+      "42  description_wordcount  0.188356\n",
+      "41           RescuerCount  0.133021\n",
+      "4                PhotoAmt  0.131462\n",
+      "1                     Age  0.118193\n",
+      "2                  Gender  0.042212\n",
+      "10            FurLength_1  0.023415\n",
+      "11            FurLength_2  0.023337\n",
+      "39                has_fee  0.022957\n",
+      "27            State_41326  0.022754\n",
+      "0                    Type  0.022536\n",
       "\n",
       "RandomForestClassifier100\n",
-      "[[  3  13  13   6  30]\n",
-      " [  1 119 116  48 105]\n",
-      " [  0 104 209  78 137]\n",
-      " [  2  69 119 132 129]\n",
-      " [  0  60  80  49 378]]\n",
-      "Precision 0.4205\n",
-      "Recall 0.4205\n",
+      "[[  2  15  11   5  18]\n",
+      " [  3 122 120  45  97]\n",
+      " [  1 118 194 101 129]\n",
+      " [  1  70 120 124 117]\n",
+      " [  1  65  75  50 396]]\n",
+      "Precision 0.419\n",
+      "Recall 0.419\n",
       "Feature Importance\n",
       "                        0         1\n",
-      "43  description_wordcount  0.160117\n",
-      "42           RescuerCount  0.118502\n",
-      "4                PhotoAmt  0.110121\n",
-      "1                     Age  0.109123\n",
-      "6             Probability  0.099177\n",
-      "2                  Gender  0.044384\n",
-      "0                    Type  0.025585\n",
-      "40                has_fee  0.021259\n",
-      "28            State_41326  0.021117\n",
-      "11            FurLength_1  0.020873\n",
+      "42  description_wordcount  0.190586\n",
+      "41           RescuerCount  0.133653\n",
+      "4                PhotoAmt  0.126173\n",
+      "1                     Age  0.121220\n",
+      "2                  Gender  0.047142\n",
+      "0                    Type  0.027959\n",
+      "39                has_fee  0.023878\n",
+      "27            State_41326  0.023200\n",
+      "10            FurLength_1  0.021908\n",
+      "11            FurLength_2  0.021524\n",
       "\n",
       "KNeighborsClassifier\n",
-      "[[  1  14  11   4  35]\n",
-      " [  2 116 112  42 117]\n",
-      " [  0 124 183  82 139]\n",
-      " [  1  80 157  94 119]\n",
-      " [  0 100 110  65 292]]\n",
-      "Precision 0.343\n",
-      "Recall 0.343\n",
+      "[[  0  13  18   4  16]\n",
+      " [  0 117 115  47 108]\n",
+      " [  1 136 187  76 143]\n",
+      " [  0  89 141  89 113]\n",
+      " [  0  94 119  37 337]]\n",
+      "Precision 0.365\n",
+      "Recall 0.365\n",
       "\n",
       "DecisionTreeClassifier\n",
-      "[[  7  17  18  11  12]\n",
-      " [  9 112 102  83  83]\n",
-      " [ 10 112 175 138  93]\n",
-      " [ 13  85 128 118 107]\n",
-      " [ 10  95 105 114 243]]\n",
-      "Precision 0.3275\n",
-      "Recall 0.3275\n",
+      "[[  5  12  13   9  12]\n",
+      " [ 14 128 113  64  68]\n",
+      " [ 11 119 191 127  95]\n",
+      " [  7  87 111 131  96]\n",
+      " [ 23  94 123 102 245]]\n",
+      "Precision 0.35\n",
+      "Recall 0.35\n",
       "Feature Importance\n",
       "                        0         1\n",
-      "43  description_wordcount  0.213934\n",
-      "42           RescuerCount  0.109225\n",
-      "1                     Age  0.108269\n",
-      "6             Probability  0.106029\n",
-      "4                PhotoAmt  0.091530\n",
-      "2                  Gender  0.041142\n",
-      "40                has_fee  0.023410\n",
-      "11            FurLength_1  0.022127\n",
-      "28            State_41326  0.021957\n",
-      "0                    Type  0.019090\n",
+      "42  description_wordcount  0.240246\n",
+      "1                     Age  0.122516\n",
+      "41           RescuerCount  0.116940\n",
+      "4                PhotoAmt  0.112731\n",
+      "2                  Gender  0.042861\n",
+      "27            State_41326  0.023661\n",
+      "11            FurLength_2  0.022762\n",
+      "10            FurLength_1  0.022555\n",
+      "39                has_fee  0.020595\n",
+      "37            State_41401  0.020031\n",
       "\n"
      ]
     }
@@ -822,32 +822,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Naive Bayes</td>\n",
-       "      <td>0.2485</td>\n",
-       "      <td>0.2485</td>\n",
+       "      <td>0.229</td>\n",
+       "      <td>0.229</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>DecisionTreeClassifier</td>\n",
-       "      <td>0.3275</td>\n",
-       "      <td>0.3275</td>\n",
+       "      <td>0.350</td>\n",
+       "      <td>0.350</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>KNeighborsClassifier</td>\n",
-       "      <td>0.3430</td>\n",
-       "      <td>0.3430</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>RandomForestClassifier10</td>\n",
-       "      <td>0.3730</td>\n",
-       "      <td>0.3730</td>\n",
+       "      <td>0.376</td>\n",
+       "      <td>0.376</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>RandomForestClassifier100</td>\n",
-       "      <td>0.4205</td>\n",
-       "      <td>0.4205</td>\n",
+       "      <td>0.419</td>\n",
+       "      <td>0.419</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -855,11 +855,11 @@
       ],
       "text/plain": [
        "                       model  precision  recall\n",
-       "0                Naive Bayes     0.2485  0.2485\n",
-       "4     DecisionTreeClassifier     0.3275  0.3275\n",
-       "3       KNeighborsClassifier     0.3430  0.3430\n",
-       "1   RandomForestClassifier10     0.3730  0.3730\n",
-       "2  RandomForestClassifier100     0.4205  0.4205"
+       "0                Naive Bayes      0.229   0.229\n",
+       "4     DecisionTreeClassifier      0.350   0.350\n",
+       "3       KNeighborsClassifier      0.365   0.365\n",
+       "1   RandomForestClassifier10      0.376   0.376\n",
+       "2  RandomForestClassifier100      0.419   0.419"
       ]
      },
      "execution_count": 9,
@@ -957,7 +957,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>e5164d828</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -982,12 +982,12 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>577d15fea</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>91736f444</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1012,7 +1012,7 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>42dd3f3ff</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -1022,7 +1022,7 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>4e9a13862</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
@@ -1042,7 +1042,7 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>181d40c5e</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
@@ -1082,7 +1082,7 @@
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>b67a29908</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
@@ -1102,7 +1102,7 @@
        "    <tr>\n",
        "      <th>4963</th>\n",
        "      <td>ed0185e39</td>\n",
-       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4964</th>\n",
@@ -1132,7 +1132,7 @@
        "    <tr>\n",
        "      <th>4969</th>\n",
        "      <td>6f07e7abf</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4970</th>\n",
@@ -1152,7 +1152,7 @@
        "    <tr>\n",
        "      <th>4973</th>\n",
        "      <td>f24991ef7</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4974</th>\n",
@@ -1167,7 +1167,7 @@
        "    <tr>\n",
        "      <th>4976</th>\n",
        "      <td>4f6029457</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4977</th>\n",
@@ -1177,12 +1177,12 @@
        "    <tr>\n",
        "      <th>4978</th>\n",
        "      <td>0c46298f8</td>\n",
-       "      <td>2</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4979</th>\n",
        "      <td>2f6cde44b</td>\n",
-       "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4980</th>\n",
@@ -1247,7 +1247,7 @@
        "    <tr>\n",
        "      <th>4992</th>\n",
        "      <td>ffe7f0b70</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1258,24 +1258,24 @@
        "          PetID  AdoptionSpeed\n",
        "0     f42161740              2\n",
        "1     0118db3a8              4\n",
-       "2     e5164d828              3\n",
+       "2     e5164d828              2\n",
        "3     5335bfb38              4\n",
        "4     ff2cf88a0              4\n",
        "5     1d13441b9              3\n",
        "6     7d835cf7c              2\n",
-       "7     577d15fea              3\n",
-       "8     91736f444              3\n",
+       "7     577d15fea              2\n",
+       "8     91736f444              4\n",
        "9     db194aec8              2\n",
        "10    10516f3c6              4\n",
        "11    c3106dcd5              1\n",
        "12    fc3fbbb99              4\n",
-       "13    42dd3f3ff              2\n",
+       "13    42dd3f3ff              1\n",
        "14    da3be5cb2              4\n",
-       "15    4e9a13862              3\n",
+       "15    4e9a13862              2\n",
        "16    2fbf2cb7c              4\n",
        "17    f45457bdc              4\n",
        "18    aad08c47b              4\n",
-       "19    181d40c5e              2\n",
+       "19    181d40c5e              3\n",
        "20    1a3c44785              4\n",
        "21    6786609aa              2\n",
        "22    1c67c5f4c              4\n",
@@ -1283,27 +1283,27 @@
        "24    06fda20a2              4\n",
        "25    b940cf8b8              2\n",
        "26    239c4b696              4\n",
-       "27    b67a29908              2\n",
+       "27    b67a29908              1\n",
        "28    72f092b4b              2\n",
        "29    7d1d7a4f6              2\n",
        "...         ...            ...\n",
-       "4963  ed0185e39              4\n",
+       "4963  ed0185e39              1\n",
        "4964  bf90589d1              4\n",
        "4965  0f796d3f9              1\n",
        "4966  6d53b2d19              1\n",
        "4967  7bc54baef              1\n",
        "4968  87615b2c6              4\n",
-       "4969  6f07e7abf              2\n",
+       "4969  6f07e7abf              1\n",
        "4970  3bf6cdab0              3\n",
        "4971  00ac364a4              4\n",
        "4972  578b82f50              1\n",
-       "4973  f24991ef7              4\n",
+       "4973  f24991ef7              2\n",
        "4974  2e9a64836              1\n",
        "4975  3dab3050c              4\n",
-       "4976  4f6029457              2\n",
+       "4976  4f6029457              1\n",
        "4977  b23e29c89              3\n",
-       "4978  0c46298f8              2\n",
-       "4979  2f6cde44b              2\n",
+       "4978  0c46298f8              4\n",
+       "4979  2f6cde44b              3\n",
        "4980  2f3677597              3\n",
        "4981  256f40704              4\n",
        "4982  653f94080              4\n",
@@ -1316,7 +1316,7 @@
        "4989  360215e23              2\n",
        "4990  0c612e8df              3\n",
        "4991  9b1241ef0              1\n",
-       "4992  ffe7f0b70              3\n",
+       "4992  ffe7f0b70              1\n",
        "\n",
        "[4993 rows x 2 columns]"
       ]
